// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render dialog to add a new mfa device with webauthn as preferred type 1`] = `
.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
}

.c9 {
  box-sizing: border-box;
  margin-bottom: 24px;
  padding: 16px;
  height: 256px;
  border-radius: 8px;
}

.c14 {
  box-sizing: border-box;
}

.c15 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 100%;
}

.c18 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 50%;
}

.c19 {
  box-sizing: border-box;
  margin-bottom: 4px;
  width: 100%;
}

.c22 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-right: 16px;
  width: 45%;
}

.c22:hover,
.c22:focus {
  background: #B29DFF;
}

.c22:active {
  background: #C5B6FF;
}

.c22:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c23 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 30%;
}

.c23:hover,
.c23:focus {
  background: rgba(255,255,255,0.13);
}

.c23:active {
  background: rgba(255,255,255,0.18);
}

.c23:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: #FFFFFF;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-top: 16px;
}

.c21 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c21:hover,
.c21:focus,
.c21:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c21::-ms-clear {
  display: none;
}

.c21::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c21:read-only {
  cursor: not-allowed;
}

.c21:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c16 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
}

.c20 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 0px;
}

.c12 {
  display: block;
  outline: none;
  height: 168px;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
  flex-direction: column;
}

.c10 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 484px;
}

.c17 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c17 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c17 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255,255,255,0.54);
}

.c17 .react-select__control:hover,
.c17 .react-select__control:focus,
.c17 .react-select__control:active {
  border: 1px solid rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c17 .react-select__control:hover .react-select__dropdown-indicator,
.c17 .react-select__control:focus .react-select__dropdown-indicator,
.c17 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c17 .react-select__control .react-select__indicator:hover,
.c17 .react-select__control .react-select__dropdown-indicator:hover,
.c17 .react-select__control .react-select__indicator:focus,
.c17 .react-select__control .react-select__dropdown-indicator:focus,
.c17 .react-select__control .react-select__indicator:active,
.c17 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c17 .react-select__control--is-focused {
  border-color: rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c17 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c17 .react-select__single-value {
  color: #FFFFFF;
}

.c17 .react-select__placeholder {
  color: rgba(255,255,255,0.54);
}

.c17 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c17 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c17 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c17 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c17 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c17 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c17 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c17 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c17 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c17 .react-select__clear-indicator {
  color: rgba(255,255,255,0.72);
}

.c17 .react-select__clear-indicator:hover,
.c17 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c17 .react-select__clear-indicator:hover svg,
.c17 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c17 .react-select__menu {
  margin-top: 0px;
  background-color: #4A5688;
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.c17 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c17 .react-select__indicator-separator {
  display: none;
}

.c17 .react-select__loading-indicator {
  display: none;
}

.c17 .react-select--is-disabled,
.c17 .react-select__control--is-disabled {
  color: rgba(255,255,255,0.36);
  border: 1px solid rgba(255,255,255,0.36);
}

.c17 .react-select--is-disabled .react-select__single-value,
.c17 .react-select__control--is-disabled .react-select__single-value,
.c17 .react-select--is-disabled .react-select__placeholder,
.c17 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255,255,255,0.36);
}

.c17 .react-select--is-disabled .react-select__indicator,
.c17 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.36);
}

.c17 .react-select__input {
  color: #FFFFFF;
}

.c11 {
  background: rgba(255,255,255,0.07);
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <form>
        <div
          class="c4 c5"
          style="flex-direction: column;"
        >
          <div
            class="c6"
            color="text.main"
          >
            Add New Two-Factor Device
          </div>
        </div>
        <div
          class="c7 c8"
        >
          <div
            class="c9 c10 c11"
            height="256px"
          >
            <img
              class="c12"
              height="168px"
              src="file_stub"
            />
            <div
              class="c13"
            >
              Enter a name for your hardware key.
            </div>
          </div>
          <div
            class="c14 c5"
          >
            <div
              class="c15"
              data-testid="mfa-select"
              width="100%"
            >
              <label
                class="c16"
                font-size="0"
                for="select"
              >
                Two-factor Type
              </label>
              <div
                class="c17"
              >
                <div
                  class="react-select-container css-2b097c-container"
                >
                  <div
                    class="react-select__control css-yk16xz-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                    >
                      <div
                        class="react-select__single-value css-1uccc91-singleValue"
                      >
                        Passkey or Security Key
                      </div>
                      <input
                        aria-autocomplete="list"
                        class="css-62g3xt-dummyInput"
                        id="select"
                        readonly=""
                        tabindex="0"
                        value=""
                      />
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c18"
              width="50%"
            >
              <label
                class="c16"
                font-size="0"
                for="select"
              >
                Allow Passwordless Login?
              </label>
              <div
                class="c17"
              >
                <div
                  class="react-select-container css-2b097c-container"
                >
                  <div
                    class="react-select__control css-yk16xz-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                    >
                      <div
                        class="react-select__single-value css-1uccc91-singleValue"
                      >
                        no
                      </div>
                      <input
                        aria-autocomplete="list"
                        class="css-62g3xt-dummyInput"
                        id="select"
                        readonly=""
                        tabindex="0"
                        value=""
                      />
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c19"
            width="100%"
          >
            <label
              class="c20"
              font-size="0"
            >
              Device Name
              <input
                autocomplete="off"
                class="c21"
                inputmode="text"
                placeholder="Name"
                type="text"
                value=""
              />
            </label>
          </div>
        </div>
        <div
          class="c14"
        >
          <button
            class="c22"
            kind="primary"
            type="submit"
            width="45%"
          >
            Add device
          </button>
          <button
            class="c23"
            kind="secondary"
            width="30%"
          >
            Cancel
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`render failed state for dialog to add a new mfa device 1`] = `
.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  margin-top: 8px;
  background: #FF6257;
  color: #000000;
  width: 100%;
}

.c7 a {
  color: #FFFFFF;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 24px;
  padding: 16px;
  height: 256px;
  border-radius: 8px;
}

.c15 {
  box-sizing: border-box;
}

.c16 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 100%;
}

.c19 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 50%;
}

.c20 {
  box-sizing: border-box;
  margin-bottom: 4px;
  width: 100%;
}

.c23 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-right: 16px;
  width: 45%;
}

.c23:hover,
.c23:focus {
  background: #B29DFF;
}

.c23:active {
  background: #C5B6FF;
}

.c23:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c24 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 30%;
}

.c24:hover,
.c24:focus {
  background: rgba(255,255,255,0.13);
}

.c24:active {
  background: rgba(255,255,255,0.18);
}

.c24:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: #FFFFFF;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-top: 16px;
}

.c22 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c22:hover,
.c22:focus,
.c22:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c22::-ms-clear {
  display: none;
}

.c22::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c22:read-only {
  cursor: not-allowed;
}

.c22:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c17 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
}

.c21 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 0px;
}

.c13 {
  display: block;
  outline: none;
  height: 168px;
}

.c5 {
  display: flex;
  align-items: center;
}

.c9 {
  display: flex;
  flex-direction: column;
}

.c11 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 484px;
}

.c18 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c18 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c18 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255,255,255,0.54);
}

.c18 .react-select__control:hover,
.c18 .react-select__control:focus,
.c18 .react-select__control:active {
  border: 1px solid rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c18 .react-select__control:hover .react-select__dropdown-indicator,
.c18 .react-select__control:focus .react-select__dropdown-indicator,
.c18 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c18 .react-select__control .react-select__indicator:hover,
.c18 .react-select__control .react-select__dropdown-indicator:hover,
.c18 .react-select__control .react-select__indicator:focus,
.c18 .react-select__control .react-select__dropdown-indicator:focus,
.c18 .react-select__control .react-select__indicator:active,
.c18 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c18 .react-select__control--is-focused {
  border-color: rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c18 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c18 .react-select__single-value {
  color: #FFFFFF;
}

.c18 .react-select__placeholder {
  color: rgba(255,255,255,0.54);
}

.c18 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c18 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c18 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c18 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c18 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c18 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c18 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c18 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c18 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c18 .react-select__clear-indicator {
  color: rgba(255,255,255,0.72);
}

.c18 .react-select__clear-indicator:hover,
.c18 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c18 .react-select__clear-indicator:hover svg,
.c18 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c18 .react-select__menu {
  margin-top: 0px;
  background-color: #4A5688;
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.c18 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c18 .react-select__indicator-separator {
  display: none;
}

.c18 .react-select__loading-indicator {
  display: none;
}

.c18 .react-select--is-disabled,
.c18 .react-select__control--is-disabled {
  color: rgba(255,255,255,0.36);
  border: 1px solid rgba(255,255,255,0.36);
}

.c18 .react-select--is-disabled .react-select__single-value,
.c18 .react-select__control--is-disabled .react-select__single-value,
.c18 .react-select--is-disabled .react-select__placeholder,
.c18 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255,255,255,0.36);
}

.c18 .react-select--is-disabled .react-select__indicator,
.c18 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.36);
}

.c18 .react-select__input {
  color: #FFFFFF;
}

.c12 {
  background: rgba(255,255,255,0.07);
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <form>
        <div
          class="c4 c5"
          style="flex-direction: column;"
        >
          <div
            class="c6"
            color="text.main"
          >
            Add New Two-Factor Device
          </div>
        </div>
        <div
          class="c7"
          kind="danger"
          width="100%"
        >
          failed to add device
        </div>
        <div
          class="c8 c9"
        >
          <div
            class="c10 c11 c12"
            height="256px"
          >
            <img
              class="c13"
              height="168px"
              src="file_stub"
            />
            <div
              class="c14"
            >
              Enter a name for your hardware key.
            </div>
          </div>
          <div
            class="c15 c5"
          >
            <div
              class="c16"
              data-testid="mfa-select"
              width="100%"
            >
              <label
                class="c17"
                font-size="0"
                for="select"
              >
                Two-factor Type
              </label>
              <div
                class="c18"
              >
                <div
                  class="react-select-container css-2b097c-container"
                >
                  <div
                    class="react-select__control css-yk16xz-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                    >
                      <div
                        class="react-select__single-value css-1uccc91-singleValue"
                      >
                        Passkey or Security Key
                      </div>
                      <input
                        aria-autocomplete="list"
                        class="css-62g3xt-dummyInput"
                        id="select"
                        readonly=""
                        tabindex="0"
                        value=""
                      />
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c19"
              width="50%"
            >
              <label
                class="c17"
                font-size="0"
                for="select"
              >
                Allow Passwordless Login?
              </label>
              <div
                class="c18"
              >
                <div
                  class="react-select-container css-2b097c-container"
                >
                  <div
                    class="react-select__control css-yk16xz-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                    >
                      <div
                        class="react-select__single-value css-1uccc91-singleValue"
                      >
                        no
                      </div>
                      <input
                        aria-autocomplete="list"
                        class="css-62g3xt-dummyInput"
                        id="select"
                        readonly=""
                        tabindex="0"
                        value=""
                      />
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c20"
            width="100%"
          >
            <label
              class="c21"
              font-size="0"
            >
              Device Name
              <input
                autocomplete="off"
                class="c22"
                inputmode="text"
                placeholder="Name"
                type="text"
                value=""
              />
            </label>
          </div>
        </div>
        <div
          class="c15"
        >
          <button
            class="c23"
            kind="primary"
            type="submit"
            width="45%"
          >
            Add device
          </button>
          <button
            class="c24"
            kind="secondary"
            width="30%"
          >
            Cancel
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`render failed state for fetching QR Code for dialog to add a new mfa device 1`] = `
.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  margin-top: 8px;
  background: #FF6257;
  color: #000000;
  width: 100%;
}

.c7 a {
  color: #FFFFFF;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 24px;
  padding: 16px;
  height: 256px;
  border-radius: 8px;
}

.c13 {
  box-sizing: border-box;
  height: 168px;
}

.c18 {
  box-sizing: border-box;
}

.c19 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 100%;
}

.c22 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 50%;
}

.c25 {
  box-sizing: border-box;
  margin-bottom: 4px;
  width: 100%;
}

.c26 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-right: 16px;
  width: 45%;
}

.c26:hover,
.c26:focus {
  background: #B29DFF;
}

.c26:active {
  background: #C5B6FF;
}

.c26:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c27 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 30%;
}

.c27:hover,
.c27:focus {
  background: rgba(255,255,255,0.13);
}

.c27:active {
  background: rgba(255,255,255,0.18);
}

.c27:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: #FFFFFF;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 12px;
  margin: 0px;
  margin-top: 8px;
  text-align: center;
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c24 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c24:hover,
.c24:focus,
.c24:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c24::-ms-clear {
  display: none;
}

.c24::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c24:read-only {
  cursor: not-allowed;
}

.c24:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c20 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
}

.c23 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 0px;
}

.c17 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c5 {
  display: flex;
  align-items: center;
}

.c9 {
  display: flex;
  flex-direction: column;
}

.c11 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c14 {
  display: flex;
  align-items: center;
  justify-content: center;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 484px;
}

.c21 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c21 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c21 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255,255,255,0.54);
}

.c21 .react-select__control:hover,
.c21 .react-select__control:focus,
.c21 .react-select__control:active {
  border: 1px solid rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c21 .react-select__control:hover .react-select__dropdown-indicator,
.c21 .react-select__control:focus .react-select__dropdown-indicator,
.c21 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c21 .react-select__control .react-select__indicator:hover,
.c21 .react-select__control .react-select__dropdown-indicator:hover,
.c21 .react-select__control .react-select__indicator:focus,
.c21 .react-select__control .react-select__dropdown-indicator:focus,
.c21 .react-select__control .react-select__indicator:active,
.c21 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c21 .react-select__control--is-focused {
  border-color: rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c21 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c21 .react-select__single-value {
  color: #FFFFFF;
}

.c21 .react-select__placeholder {
  color: rgba(255,255,255,0.54);
}

.c21 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c21 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c21 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c21 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c21 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c21 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c21 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c21 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c21 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c21 .react-select__clear-indicator {
  color: rgba(255,255,255,0.72);
}

.c21 .react-select__clear-indicator:hover,
.c21 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c21 .react-select__clear-indicator:hover svg,
.c21 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c21 .react-select__menu {
  margin-top: 0px;
  background-color: #4A5688;
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.c21 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c21 .react-select__indicator-separator {
  display: none;
}

.c21 .react-select__loading-indicator {
  display: none;
}

.c21 .react-select--is-disabled,
.c21 .react-select__control--is-disabled {
  color: rgba(255,255,255,0.36);
  border: 1px solid rgba(255,255,255,0.36);
}

.c21 .react-select--is-disabled .react-select__single-value,
.c21 .react-select__control--is-disabled .react-select__single-value,
.c21 .react-select--is-disabled .react-select__placeholder,
.c21 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255,255,255,0.36);
}

.c21 .react-select--is-disabled .react-select__indicator,
.c21 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.36);
}

.c21 .react-select__input {
  color: #FFFFFF;
}

.c12 {
  background: rgba(255,255,255,0.07);
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <form>
        <div
          class="c4 c5"
          style="flex-direction: column;"
        >
          <div
            class="c6"
            color="text.main"
          >
            Add New Two-Factor Device
          </div>
        </div>
        <div
          class="c7"
          kind="danger"
          width="100%"
        >
          failed to create totp register challenge
        </div>
        <div
          class="c8 c9"
        >
          <div
            class="c10 c11 c12"
            height="256px"
          >
            <div
              class="c13 c14"
              height="168px"
            />
            <div
              class="c15"
              font-size="1"
            >
              Scan the QR Code with any authenticator app and enter the generated code.
               
              <div
                class="c16"
                color="text.slightlyMuted"
              >
                We recommend
                 
                <a
                  class="c17"
                  href="https://authy.com/download/"
                  rel="noreferrer"
                  target="_blank"
                >
                  Authy
                </a>
                .
              </div>
            </div>
          </div>
          <div
            class="c18 c5"
          >
            <div
              class="c19"
              data-testid="mfa-select"
              width="100%"
            >
              <label
                class="c20"
                font-size="0"
                for="select"
              >
                Two-factor Type
              </label>
              <div
                class="c21"
              >
                <div
                  class="react-select-container css-2b097c-container"
                >
                  <div
                    class="react-select__control css-yk16xz-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                    >
                      <div
                        class="react-select__single-value css-1uccc91-singleValue"
                      >
                        Authenticator App
                      </div>
                      <input
                        aria-autocomplete="list"
                        class="css-62g3xt-dummyInput"
                        id="select"
                        readonly=""
                        tabindex="0"
                        value=""
                      />
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c22"
              width="50%"
            >
              <label
                class="c23"
                font-size="0"
              >
                Authenticator Code
                <input
                  autocomplete="one-time-code"
                  class="c24"
                  inputmode="numeric"
                  placeholder="123 456"
                  type="text"
                  value=""
                />
              </label>
            </div>
          </div>
          <div
            class="c25"
            width="100%"
          >
            <label
              class="c23"
              font-size="0"
            >
              Device Name
              <input
                autocomplete="off"
                class="c24"
                inputmode="text"
                placeholder="Name"
                type="text"
                value=""
              />
            </label>
          </div>
        </div>
        <div
          class="c18"
        >
          <button
            class="c26"
            kind="primary"
            type="submit"
            width="45%"
          >
            Add device
          </button>
          <button
            class="c27"
            kind="secondary"
            width="30%"
          >
            Cancel
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
